[package]
name = "zerotect"
version = "0.4.13"
authors = ["Archis Gore <archis@polyverse.io>"]
edition = "2018"

[dependencies]
log = "0.4.11"
sys-info = "0.7.0"
sysctl = "0.4.0"
strum = "0.20.0"
strum_macros = "0.20.1"
regex = "1"
enum-display-derive = "0.1.0"
num = "0.3.1"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3.3"
timeout-iterator = { version = "1.1.4", default-features = false, features = ["async"] }
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = { version = "1.0.61", features = ["arbitrary_precision"] }
toml = "0.5.8"
http = "0.2.2"
rmesg = {version = "1.0.9", default-features = false, features = ["async", "extra-traits"] }
libflate = "1.0.3"
rust-cef-derive = "0.2.0"
rust-cef = "0.2.0"
syslog = "5.0.0"
libc = "0.2.81"
file-rotation = { version = "0.4.0", default-features = false, features =["async"] }
futures = "0.3.8"
pagerduty-rs = {version = "0.1.0", default-features = false, features = ["async"] }
time = {version = "0.2.23", features = ["std", "serde"] }
reqwest = { version = "0.10.10"}
tokio = { version = "1.0.1", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1.0"
pin-project = { version = "1.0.2" }

[dependencies.clap]
version = "2.33.3"
# Disable all features - just minimal brutal args parsing
default-features = false

[dev-dependencies]
assert_matches = "1.4.0"
rand = "0.8.0"
pretty_assertions = "0.6.1"

[profile.dev]
# We don't need stack unwinding in dev either - can be manually enabled
panic = 'abort'

[profile.release]
# We don't need stack unwinding in releases
panic = 'abort'
# Enable LTO for release (since it only builds in Travis and doesn't block day to day)
lto = "fat"
# One code-gen unit so we get a highly optimized binary
codegen-units = 1
