[package]
name = "zerotect"
version = "0.4.20"
authors = ["Archis Gore <archis@polyverse.io>"]
edition = "2018"

[dependencies]
log = "0.4.13"
sys-info = "0.9.0"
sysctl = "0.4.0"
strum = "0.21.0"
strum_macros = "0.21.1"
regex = "1"
enum-display-derive = "0.1.0"
num = "0.4.0"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3.3"
timeout-iterator = { version = "1.1.4" }
serde = { version = "1.0.120", features = ["derive", "rc"] }
serde_json = { version = "1.0.61", features = ["arbitrary_precision"] }
toml = "0.5.8"
http = "0.2.3"
rmesg = {version = "1.0.13", features = ["extra-traits"] }
libflate = "1.0.3"
rust-cef-derive = "0.2.1"
rust-cef = "0.2.1"
syslog = "5.0.0"
libc = "0.2.82"
file-rotation = { version = "0.4.1" }
futures = "0.3.12"
pagerduty-rs = {version = "0.1.1" }
time = {version = "0.2.24", features = ["std", "serde"] }
reqwest = { version = "0.11.0"}
tokio = { version = "1.1.0", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1.2"
pin-project = { version = "1.0.4" }

[dependencies.clap]
version = "2.33.3"
# Disable all features - just minimal brutal args parsing
default-features = false

[dev-dependencies]
assert_matches = "1.4.0"
rand = "0.8.2"
pretty_assertions = "0.7.2"

[profile.dev]
# We don't need stack unwinding in dev either - can be manually enabled
panic = 'abort'

[profile.release]
# We don't need stack unwinding in releases
panic = 'abort'
# Enable LTO for release (since it only builds in Travis and doesn't block day to day)
lto = "fat"
# One code-gen unit so we get a highly optimized binary
codegen-units = 1
