[package]
name = "zerotect"
version = "0.4.21"
authors = ["Archis Gore <archis@polyverse.io>"]
edition = "2018"

[dependencies]
log = "0.4.14"
sys-info = "0.9.1"
sysctl = "0.4.3"
strum = "0.23.0"
strum_macros = "0.23.1"
regex = "1.5.4"
enum-display-derive = "0.1.1"
num = "0.4.0"
lazy_static = "1.4.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
timeout-iterator = { version = "1.1.5" }
serde = { version = "1.0.132", features = ["derive", "rc"] }
serde_json = { version = "1.0.73", features = ["arbitrary_precision"] }
toml = "0.5.8"
http = "0.2.5"
rmesg = {version = "1.0.17", features = ["extra-traits"] }
libflate = "1.1.1"
rust-cef-derive = "0.2.5"
rust-cef = "0.2.5"
syslog = "6.0.1"
libc = "0.2.112"
file-rotation = { version = "0.4.1" }
futures = "0.3.19"
pagerduty-rs = {version = "0.1.3" }
time = {version = "0.3.5", features = ["std", "serde"] }
reqwest = { version = "0.11.8"}
tokio = { version = "1.15.0", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1.8"
pin-project = { version = "1.0.8" }

[dependencies.clap]
version = "2.34.0"
# Disable all features - just minimal brutal args parsing
default-features = false

[dev-dependencies]
assert_matches = "1.5.0"
rand = "0.8.2"
pretty_assertions = "1.0.0"

[profile.dev]
# We don't need stack unwinding in dev either - can be manually enabled
panic = 'abort'

[profile.release]
# We don't need stack unwinding in releases
panic = 'abort'
# Enable LTO for release (since it only builds in Travis and doesn't block day to day)
lto = "fat"
# One code-gen unit so we get a highly optimized binary
codegen-units = 1
